video player functioning and climber animation added

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,17 @@ html {
   font-family: 'Roboto', sans-serif;
 }
 
+html gutter-container {
+  width: 100%;
+  padding: 0 2rem;
+}
+
+@media screen and (min-width: 30em) {
+  html gutter-container {
+    padding: 0 4rem;
+  }
+}
+
 html body {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -27,31 +38,54 @@ html body header {
       -ms-flex-direction: row;
           flex-direction: row;
   width: 100%;
-  background-color: black;
+  background-color: #2b2c2d;
   padding: 2rem 0;
+  -webkit-box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.3);
 }
 
-html body header container {
-  padding: 0 2.5rem;
-}
-
-html body header container h1 {
-  text-align: center;
+html body header h1 {
+  font-size: 2rem;
   color: white;
 }
 
+@media screen and (min-width: 40em) {
+  html body header h1 {
+    font-size: 3rem;
+  }
+}
+
+html body header h1 i {
+  padding-right: 0.25rem;
+}
+
 html body main {
-  padding: 2rem 4rem;
+  padding: 0 0 2rem 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1;
+          flex: 1 1;
+  margin-top: -0.1rem;
+}
+
+html body main h2 {
+  text-align: center;
+  font-size: 2.4rem;
+  margin-bottom: 2.4rem;
+  font-weight: bold;
+  padding-top: 3rem;
+}
+
+@media screen and (min-width: 40em) {
+  html body main h2 {
+    font-size: 3.5rem;
+  }
 }
 
 html body main video-container {
@@ -59,18 +93,41 @@ html body main video-container {
   width: 100%;
   background-color: #0056a0;
   overflow: hidden;
-  border-radius: 0.5rem;
   position: relative;
+  margin: 0 auto 5rem;
+}
+
+@media screen and (min-width: 30em) {
+  html body main video-container {
+    border-radius: 0.5rem;
+  }
+}
+
+html body main video-container.fullscreen {
+  max-width: 100%;
+  width: 100%;
+}
+
+html body main video-container.show-controls controls-wrapper {
+  bottom: 0px;
+  opacity: 1;
+  pointer-events: auto;
+  -webkit-transition: all 0.15s ease;
+  transition: all 0.15s ease;
 }
 
 html body main video-container controls-wrapper {
   position: absolute;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: -1.5rem;
+  opacity: 0;
+  pointer-events: none;
   z-index: 1;
   color: white;
   font-size: 1.6rem;
+  -webkit-transition: all 0.1s ease;
+  transition: all 0.1s ease;
 }
 
 html body main video-container controls-wrapper:before {
@@ -87,10 +144,11 @@ html body main video-container controls-wrapper:before {
 html body main video-container controls-wrapper video-timeline {
   height: 0.7rem;
   width: 100%;
+  display: block;
   cursor: pointer;
 }
 
-html body main video-container controls-wrapper video-timeline:hover current-time, html body main video-container controls-wrapper video-timeline:hover progress-bar::before {
+html body main video-container controls-wrapper video-timeline:hover span, html body main video-container controls-wrapper video-timeline:hover progress-bar::before {
   display: block;
 }
 
@@ -103,7 +161,7 @@ html body main video-container controls-wrapper video-timeline progress-area {
   background: rgba(255, 255, 255, 0.6);
 }
 
-html body main video-container controls-wrapper video-timeline progress-area current-time {
+html body main video-container controls-wrapper video-timeline progress-area span {
   display: none;
   position: absolute;
   left: 50%;
@@ -116,7 +174,7 @@ html body main video-container controls-wrapper video-timeline progress-area cur
 }
 
 html body main video-container controls-wrapper video-timeline progress-area progress-bar {
-  width: 50%;
+  width: 0%;
   height: 100%;
   position: relative;
   background: #0056a0;
@@ -146,7 +204,7 @@ html body main video-container controls-wrapper video-controls {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0.5rem 2rem 1rem;
+  padding: 0 1rem;
 }
 
 html body main video-container controls-wrapper video-controls video-timer {
@@ -184,27 +242,30 @@ html body main video-container controls-wrapper video-controls .options.right pl
   position: relative;
 }
 
-html body main video-container controls-wrapper video-controls .options.right playback-content button.playback-speed:hover ~ .speed-options {
-  opacity: 1;
-  pointer-events: auto;
-}
-
 html body main video-container controls-wrapper video-controls .options.right playback-content .speed-options {
   position: absolute;
-  bottom: 4rem;
+  bottom: 6rem;
   left: -4rem;
   background: white;
   list-style: none;
   width: 9.5rem;
   border-radius: 0.5rem;
   opacity: 0;
+  -webkit-transition: all 0.1s ease;
+  transition: all 0.1s ease;
   pointer-events: none;
+  cursor: pointer;
+}
+
+html body main video-container controls-wrapper video-controls .options.right playback-content .speed-options.show {
+  opacity: 1;
+  pointer-events: auto;
 }
 
 html body main video-container controls-wrapper video-controls .options.right playback-content .speed-options li {
   font-size: 1.4rem;
   padding: 0.5rem 0 0.5rem 1.5rem;
-  color: black;
+  color: #2b2c2d;
 }
 
 html body main video-container controls-wrapper video-controls .options.right playback-content .speed-options li.active {
@@ -233,12 +294,31 @@ html body main video-container controls-wrapper video-controls .options video-ti
 }
 
 html body main video-container controls-wrapper video-controls .options button {
-  width: 3rem;
-  height: 3rem;
+  width: 5rem;
+  height: 5rem;
   border: none;
   background: none;
   color: white;
-  font-size: 1.8rem;
+  font-size: 2.6rem;
+  cursor: pointer;
+}
+
+html body main video-container controls-wrapper video-controls .options button:focus {
+  -webkit-box-shadow: inset 0 0 0 0.4rem rgba(27, 127, 204, 0.8);
+          box-shadow: inset 0 0 0 0.4rem rgba(27, 127, 204, 0.8);
+  outline: none;
+}
+
+html body main video-container controls-wrapper video-controls .options button:focus:not(:focus-visible) {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  outline: none;
+}
+
+html body main video-container controls-wrapper video-controls .options button:focus-visible {
+  -webkit-box-shadow: inset 0 0 0 0.4rem rgba(27, 127, 204, 0.8);
+          box-shadow: inset 0 0 0 0.4rem rgba(27, 127, 204, 0.8);
+  outline: none;
 }
 
 html body main video-container controls-wrapper video-controls .options button i {
@@ -246,6 +326,15 @@ html body main video-container controls-wrapper video-controls .options button i
   height: 100%;
   line-height: 4rem;
   font-size: inherit;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 html body main video-container controls-wrapper video-controls .options button span {
@@ -256,12 +345,38 @@ html body main video-container video {
   width: 100%;
 }
 
+html body main climber-container {
+  overflow: hidden;
+}
+
+html body main climber-container svg#climberScene {
+  width: 200%;
+  height: 100%;
+  left: 0%;
+  position: relative;
+}
+
+@media screen and (min-width: 40em) {
+  html body main climber-container svg#climberScene {
+    width: 100%;
+  }
+}
+
+html body main climber-container svg#climberScene #fg {
+  -webkit-transform: translateX(-5%);
+          transform: translateX(-5%);
+}
+
 html body footer {
-  background-color: #0056a0;
+  background-color: #2b2c2d;
   color: white;
   text-align: center;
   width: 100%;
   padding: 2rem 0;
   font-size: 1.4rem;
+}
+
+html body footer i {
+  color: #ff0033;
 }
 /*# sourceMappingURL=styles.css.map */
