--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,11 +3,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
 $blue-brand: rgb(0, 86, 160);
+$espn-red: rgb(255, 0, 51);
+$espn-gray: #2b2c2d;
 
 html {
     height: 100%;
     font-size: 62.5%;
     font-family: 'Roboto', sans-serif;
+
+    gutter-container {
+        width: 100%;
+        padding: 0 2rem;
+
+        @media screen and (min-width: 30em) {
+            padding: 0 4rem;
+        }
+    }
 
     body {
         display: flex;
@@ -18,41 +29,103 @@ html {
             display: flex;
             flex-direction: row;
             width: 100%;
-            background-color: black;
+            background-color: $espn-gray;
             padding: 2rem 0;
+            box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.3);
 
-            container {
-                padding: 0 2.5rem;
+            h1 {
+                font-size: 2rem;
+                color: white;
 
-                h1 {
-                    text-align: center;
-                    color: white;
+                @media screen and (min-width: 40em) {
+                    font-size: 3rem;
+                }
+
+                // &:before, &:after {
+                //     transform: skew(-25deg, 0);
+                //     content: '';
+                //     display: block;
+                //     height: 7.1rem;;
+                //     position: absolute;
+                //     top: 0;
+                // }
+
+                // &:before {
+                //     background: $espn-red;
+                //     left: -2rem;
+                //     right: 38rem;
+                //     z-index: 1;
+                // }
+
+                // &:after {
+                //     background: #b40000;
+                //     left: -2rem;
+                //     right: 37rem;
+                //     z-index: 0;
+                // }
+
+                i {
+                    padding-right: 0.25rem;
                 }
             }
         }
 
         main {
-            padding: 2rem 4rem;
+            padding: 0 0 2rem 0;
             display: flex;
-            flex-direction: row;
-            justify-content: center;
+            flex-direction: column;
+            flex: 1 1;
+            margin-top: -0.1rem;
+
+            h2 {
+                text-align: center;
+                font-size: 2.4rem;
+                margin-bottom: 2.4rem;
+                font-weight: bold;
+                padding-top: 3rem;
+
+                @media screen and (min-width: 40em) {
+                    font-size: 3.5rem;
+                }
+            }
 
             video-container {
                 max-width: 900px;
                 width: 100%;
                 background-color: $blue-brand;
                 overflow: hidden;
-                border-radius: 0.5rem;
                 position: relative;
+                margin: 0 auto 5rem;
+
+                @media screen and (min-width: 30em) {
+                    border-radius: 0.5rem;
+                }
+
+                &.fullscreen {
+                    max-width: 100%;
+                    width: 100%;
+                }
+
+                &.show-controls {
+                    controls-wrapper {
+                        bottom: 0px;
+                        opacity: 1;
+                        pointer-events: auto;
+                        transition: all 0.15s ease;
+                    }
+                }
 
                 controls-wrapper {
                     position: absolute;
                     left: 0;
                     right: 0;
-                    bottom: 0;
+                    bottom: -1.5rem;
+                    opacity: 0;
+                    pointer-events: none;
                     z-index: 1;
                     color: white;
                     font-size: 1.6rem;
+                    transition: all 0.1s ease;
 
                     &:before {
                         content: "";
@@ -67,10 +140,11 @@ html {
                     video-timeline {
                         height: 0.7rem;
                         width: 100%;
+                        display: block;
                         cursor: pointer;
 
                         &:hover {
-                            current-time, progress-bar::before {
+                            span, progress-bar::before {
                                 display: block;
                             }
                         }
@@ -81,7 +155,7 @@ html {
                             position: relative;
                             background: rgba(255,255,255,0.6);
 
-                            current-time {
+                            span {
                                 display: none;
                                 position: absolute;
                                 left: 50%;
@@ -93,7 +167,7 @@ html {
                             }
 
                             progress-bar {
-                                width: 50%;
+                                width: 0%;
                                 height: 100%;
                                 position: relative;
                                 background: $blue-brand;
@@ -118,7 +192,7 @@ html {
                         display: flex;
                         justify-content: center;
                         align-items: center;
-                        padding: 0.5rem 2rem 1rem;
+                        padding: 0 1rem;
 
                         video-timer {
                             display: flex;
@@ -138,26 +212,28 @@ html {
                                 playback-content {
                                     position: relative;
 
-                                    button.playback-speed:hover ~ .speed-options {
-                                        opacity: 1;
-                                        pointer-events: auto;
-                                    }
-
                                     .speed-options {
                                         position: absolute;
-                                        bottom: 4rem;
+                                        bottom: 6rem;
                                         left: -4rem;
                                         background: white;
                                         list-style: none;
                                         width: 9.5rem;
                                         border-radius: 0.5rem;
                                         opacity: 0;
+                                        transition: all 0.1s ease;
                                         pointer-events: none;
+                                        cursor: pointer;
+                                        
+                                        &.show {
+                                            opacity: 1;
+                                            pointer-events: auto;
+                                        }
 
                                         li {
                                             font-size: 1.4rem;
                                             padding: 0.5rem 0 0.5rem 1.5rem;
-                                            color: black;
+                                            color: $espn-gray;
 
                                             &.active {
                                                 background: $blue-brand;
@@ -188,18 +264,37 @@ html {
                             }
 
                             button {
-                                width: 3rem;
-                                height: 3rem;
+                                width: 5rem;
+                                height: 5rem;
                                 border: none;
                                 background: none;
                                 color: white;
-                                font-size: 1.8rem;
+                                font-size: 2.6rem;
+                                cursor: pointer;
+
+                                &:focus {
+                                    box-shadow: inset 0 0 0 0.4rem rgba(27, 127, 204, 0.8);
+                                    outline: none;
+                                }
+
+                                &:focus:not(:focus-visible) {   
+                                    box-shadow: none;
+                                    outline: none;
+                                }
+
+                                &:focus-visible { 
+                                    box-shadow: inset 0 0 0 0.4rem rgba(27, 127, 204, 0.8);
+                                    outline: none; 
+                                }
 
                                 i {
                                     width: 100%;
                                     height: 100%;
                                     line-height: 4rem;
                                     font-size: inherit;
+                                    display: flex;
+                                    align-items: center;
+                                    justify-content: center;
                                 }
 
                                 span {
@@ -214,15 +309,38 @@ html {
                     width: 100%;
                 }
             }
+
+            climber-container {
+                overflow: hidden;
+
+                svg#climberScene {
+                    width: 200%;
+                    height: 100%;
+                    left: 0%;
+                    position: relative;
+
+                    @media screen and (min-width: 40em) {
+                        width: 100%;
+                    }
+
+                    #fg {
+                        transform: translateX(-5%);
+                    }
+                }
+            }
         }
 
         footer {
-            background-color:rgb(0, 86, 160);
+            background-color: $espn-gray;
             color: white;
             text-align: center;
             width: 100%;
             padding: 2rem 0;
             font-size: 1.4rem;
+
+            i {
+                color: $espn-red;
+            }
         }
     }
 }
